# cf-workers-web-app

./: Cargo.toml  README.md  wrangler.toml
src/: lib.rs  macros.rs  routes.rs  utils.rs
src/controllers/: home.rs
worker/: worker.js
