[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = { version = "0.2.64", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.14"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0.114"
serde_json = "1.0.56"
web-sys = { version = "0.3", features = ["ExtendableEvent", "Headers", "Request", "RequestInit", "Response", "ResponseInit", "Url"] }
webworker = { version = "0.1" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
